infrastructure/patch-cartservice-otel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: boutique
spec:
  template:
    spec:
      containers:
      - name: server
